# runewall

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README-START-HERE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  community-map-verify-example.yml
.runewall/: runewall.db
brain/: README.md  runewall-brain-bundle.md  runewall-technical-spec.md
demos/: README.md  runewall_60_second_demo.ps1
docs/: ANNOUNCEMENT.md  COMMUNITY_MAPS.md  COMMUNITY_MAP_KEYS.md  COMMUNITY_MAP_MANIFEST.md  COMMUNITY_MAP_SIGNING.md  COMMUNITY_PACKAGE_VERIFY_CI.md  HANDOFF.md  INSTALL.md  MCP_CLIENT_EXAMPLES.md  MCP_SERVER_PLAN.md  PACKAGING.md  POLICIES.md  PYTHON_SDK_EXAMPLES.md  QUICKSTART.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  ROADMAP.md  agent-json-schema.md  maps-contributing.md
examples/: file_rollback_demo.py
examples/community-maps/: README.md  github_create_issue.safe.json  manifest.example.json
examples/community-maps/keys/: example-author-key.json
maps/: README.md
runewall/: __init__.py  sdk.py
runewall/cli/: __init__.py  main.py
runewall/core/: __init__.py  config.py  db.py  interceptor.py  log.py  models.py  rollback.py  rules.py  snapshot.py
runewall/maps/: README.md  __init__.py  executor.py  planner.py  registry.py
runewall/maps/sites/: cloudflare.json  discord.json  github.json  linear.json  netlify.json  slack.json  supabase.json  vercel.json
runewall/translate/: __init__.py  reader.py
specs/: README.md
tests/: __init__.py  test_sdk.py
tests/cli/: __init__.py  test_cli.py
tests/core/: __init__.py  test_config.py  test_interceptor.py  test_log.py  test_rollback.py  test_rules.py  test_snapshot.py
tests/integration/: __init__.py  test_dry_run_logging.py  test_file_rollback.py  test_github_create_issue_execution.py  test_protect_file_create_delete.py  test_protect_file_write.py  test_read_logging.py  test_review_flow.py
tests/maps/: __init__.py  test_executor.py  test_planner.py  test_registry.py
tests/security/: test_community_maps_safe_default.py  test_dry_run_no_network.py  test_safe_defaults_tripwire.py  test_token_safety.py
tests/translate/: test_reader.py
