[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runewall"
version = "0.2.0"
description = "Local-first runtime for logging and protecting agent actions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Runewall Contributors" }]
keywords = ["ai", "agents", "sqlite", "cli", "rollback"]
dependencies = ["beautifulsoup4>=4.12", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
runewall = "runewall.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
