[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runewall"
version = "0.8.6"
description = "Local-first runtime for logging and protecting agent actions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Runewall Contributors" }]
keywords = ["ai", "agents", "sqlite", "cli", "rollback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["beautifulsoup4>=4.12", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
runewall = "runewall.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
